[package]
name = "railgun"
version = "0.1.0"
authors = ["Chris Fung <aergonaut@gmail.com>"]

[lib]
name = "railgun"
path = "src/railgun/lib.rs"

[[bin]]
name = "server"
test = false
doc = false

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["json", "uuid"] }
diesel = { version = "0.12.0", features = ["postgres", "uuid"] }
diesel_codegen = { version = "0.12.0", features = ["postgres"] }
dotenv = "0.10.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.5.0", features = ["serde"] }
r2d2 = "0.7.2"
r2d2-diesel = "0.12.0"
error-chain = "0.10.0"
rust-crypto = "0.2.36"
